--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,11 +25,11 @@ a:visited{
 nav{
   display: grid;
   grid-template-columns: repeat(17, 1fr);
-  grid-template-rows: repeat(4, 0.75vw); 
+  /*grid-template-rows: repeat(4, 0.75vw);*/ 
   position: sticky;
   z-index: 100; 
   top: 0;
-  font-size: 1.5rem;
+  font-size: clamp(12px, 1.5rem, 1.5rem);
 }
 
 header{
