--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,11 @@
 :root {
   background-color: rgb(42, 42, 43);
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
+body{
   margin: 0;
-  padding: 0;
 }
 
 a{
@@ -32,10 +28,23 @@ nav{
   font-size: 1.5rem;
 }
 
-header{
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(12, 4vw);
+@media (max-width:1024px){
+  header{
+    margin: 5% 5% 0 5%;
+    background-color: rgb(180, 180, 180);
+    border-radius: 5px 5px 50px 5px;
+    display: grid;
+    grid-template-columns: repeat(9, 10vw);
+    grid-template-rows: repeat(9, 10vh);
+  }    
+}
+
+@media (min-width:1024px){
+  header{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 4vw);
+  }
 }
 
 h1{
@@ -47,8 +56,8 @@ h1{
   color: rgb(255, 255, 255);
   font-size: 1rem;
   margin: 0;
-  width: 39vw;
-  height: 24.5vw;
+  /* width: clamp(300px, 40vw, 40vw); */
+  height: clamp(183.75px, 24.5vw, 24.5vw);
   margin-left: auto;
   margin-right: auto;
   border-radius: 10%;
