--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -63,31 +63,34 @@
   .gboyscreen{
     position: relative;
     grid-column: 1 / 10;
-    grid-row: 1 / 5;
+    height: fit-content;
     background-color: rgb(75, 105, 41);
     border: grey solid 10px;
-    border-radius: 5px 5px 50px 5px;  
-  }
-
-  .gboybuttons{
-
-  }
-
-  .aboutcopy{
+    border-radius: 5px 5px 50px 5px;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
     color: rgb(255, 255, 255);
-    font-size: clamp(14px, 0.2vw, 2.5vw);
-    margin-left: 15px;
-    margin-right: 15px;
+    font-size: clamp(16px, 3vw, 3vw);  
   }
 
   .me{
-    width: 25%;
-    height: 25%;
+    width: 200px;
+    height: 200px;
     float: left;
+    margin: 10px 10px 0px 10px;
+    border: rgb(0, 0, 0) solid 1px;
+    border-radius: 0px 0px 50px 0px;
+  }
+
+  .abouttext{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .gboybuttons{
+
   }
 }
 
@@ -183,6 +186,10 @@
     background-color: #d80000;
     border-top-right-radius: 100%;
     border-bottom-right-radius: 100%;
+  }
+
+  .gboyscreen{
+    display: none;
   }
 }
 
